[tool:pytest]
testpaths = t/unit/
python_classes = test_*

[pydocstyle]
ignore = D102,D104,D203,D105,D213,D107,D407,D412,D413

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
extend-ignore = N806, N802, N801, N803

[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[isort]
profile=black
